<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/list"
            android:icon="@drawable/ic_list"
            android:title="@string/list" />
        <item
            android:id="@+id/signout"
            android:icon="@drawable/ic_signout"
            android:title="@string/logout" />
        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />
        <item
            android:id="@+id/other"
            android:icon="@drawable/ic_help"
            android:title="@string/other_functionality" />
    </group>
</menu>
