<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:id="@+id/content"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:ellipsize="end"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp"
                android:text="@string/header"
                android:maxLines="3"
                android:textAlignment="center"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textAllCaps="false"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rl_lname"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nome"
                    android:id="@+id/lbl_lname"
                    android:layout_centerVertical="true"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_lname"
                    android:layout_toEndOf="@+id/lbl_lname"
                    android:autofillHints=""
                    android:inputType="text" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"

                    android:text="@string/address"
                    android:id="@+id/lbl_address"
                    android:layout_centerVertical="true"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_address"
                    android:layout_toEndOf="@+id/lbl_address"
                    android:autofillHints=""
                    android:inputType="text"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/spinner_name"
                    android:id="@+id/spinner_name"
                    android:layout_centerVertical="true"

                    />
            <Spinner
                android:id="@+id/planets_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/spinner_name"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rl_gender"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tipo"
                    android:id="@+id/lbl_gender"
                    android:layout_centerVertical="true"
                    />
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rg_gender"
                    android:layout_toEndOf="@+id/lbl_gender">

                    <RadioButton
                        android:id="@+id/rb_public"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/pubblico" />

                    <RadioButton
                        android:id="@+id/rb_private"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/privato" />
                </RadioGroup>
            </RelativeLayout>

            <Button
                android:id="@+id/customBtn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="15dp"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:text="@string/custom_btn" />

        </LinearLayout>

    </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>